--- a/Home-page.html
+++ b/Home-page.html
@@ -32,7 +32,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Home-page.html" data-home-page-title="Home page" class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-0fb8"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-0fb8"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-white u-text-hover-palette-2-base" href="#">
